@@ -1,85 +1,66 @@
+import static java.lang.Boolean.parseBoolean
+
 buildscript {
     repositories {
-        mavenLocal()
         mavenCentral()
+        maven {url 'https://plugins.gradle.org/m2/'}
         maven {url 'https://repo.grails.org/grails/core'}
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:hibernate5:${gormVersion-".RELEASE"}"
+        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "org.grails.plugins:hibernate5:$grailsHibernatePluginVersion"
     }
 }
 
-// Custom props sourced from gradle.properties
-def appCode = xhAppCode,
-    appName = xhAppName,
-    appVersion = xhAppVersion,
-    appBuild = findProperty('xhAppBuild') ?: 'UNKNOWN'
-
-version appVersion
-group 'io.xh'
+version xhAppVersion
+group xhAppPackage
 
 apply plugin:'idea'
 apply plugin:'war'
 apply plugin:'org.grails.grails-web'
-apply plugin:'org.grails.grails-gsp'
 
 repositories {
-    mavenLocal()
     mavenCentral()
     maven {url 'https://repo.grails.org/grails/core'}
     maven {url 'https://repo.xh.io/content/groups/public/'}
 }
 
-configurations.all {
-    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+configurations {
+    all {
+        // Ensure any SNAPSHOT dependencies are always resolved to the latest available version.
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
 }
 
-boolean inlineHoist = runHoistInline == 'true'
-if (inlineHoist) {
-    println "${appName}: running with Hoist Core INLINE...."
+springBoot {
+    mainClass = xhAppPackage + ".Application"
+}
+
+if (parseBoolean(runHoistInline)) {
+    println "${xhAppName}: running with Hoist Core INLINE...."
+    grails.plugins {
+        implementation project(":hoist-core")
+    }
 } else {
-    println "${appName}: running with Hoist Core PACKAGED at v${hoistCoreVersion}...."
+    println "${xhAppName}: running with Hoist Core PACKAGED at v${hoistCoreVersion}...."
+    dependencies {
+        implementation "io.xh:hoist-core:$hoistCoreVersion"
+    }
 }
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    provided "org.springframework.boot:spring-boot-starter-tomcat"
+    // For server-side JWT validation.
+    implementation "org.bitbucket.b_c:jose4j:0.9.6"
 
-    compile "org.grails:grails-web-boot"
-    compile "org.grails:grails-logging"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-plugin-i18n"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-interceptors"
+    // Database drivers - H2 for temporary in-memory DB with `useH2: true` in instanceConfig YAML
+    // MySQL for deployed instances, or more stateful local workstation setups.
+    runtimeOnly "com.h2database:h2:2.2.224"
+    runtimeOnly "mysql:mysql-connector-java:8.0.33"
 
-    compile "org.grails.plugins:gsp"
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:events"
-
-    compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.1.5.Final"
-    compile "org.hibernate:hibernate-ehcache:5.1.5.Final"
-
-    console "org.grails:grails-console"
-    profile "org.grails.profiles:web"
-
-    compile "org.springframework:spring-websocket"
-
-    // For JWT token validation.
-    compile "org.bitbucket.b_c:jose4j:0.7.2"
-
-    runtime "org.apache.tomcat:tomcat-jdbc"
-    runtime "mysql:mysql-connector-java:5.1.47"
-
-    if (!inlineHoist) {
-        // Include Hoist as versioned external dependency when building a WAR for release
-        compile "io.xh:hoist-core:$hoistCoreVersion"
+    // For hot reloading
+    developmentOnly "io.methvin:directory-watcher:0.15.0"
+    if (parseBoolean(enableHotSwap)) {
+        developmentOnly "io.xh:groovyReset:1.0"
     }
 }
 
@@ -88,33 +69,67 @@ grails {
     pathingJar = true
 }
 
-if (inlineHoist) {
-    // Include Hoist as an inline plugin in multi-project mode when running in development
-    grails {
-        plugins {
-            compile project(":hoist-core")
-        }
-    }
+Map hoistMetaData = [
+    'info.xh.appCode': xhAppCode,
+    'info.xh.appName': xhAppName,
+    'info.xh.appPackage': xhAppPackage,
+    'info.xh.appBuild': findProperty('xhAppBuild') ?: 'UNKNOWN'
+]
+
+def allJvmArgs = [
+    '-Dspring.output.ansi.enabled=always',
+    '-XX:TieredStopAtLevel=1',
+    '-Xmx1024m',
+    "--add-modules=java.se",
+    "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.management/sun.management=ALL-UNNAMED",
+    "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED"
+]
+
+
+
+if (parseBoolean(enableHotSwap)) {
+    def groovyReset = configurations.developmentOnly.resolve().find {it.name.contains("groovyReset")}
+    allJvmArgs += [
+        '-XX:HotswapAgent=fatjar',
+        '-XX:+AllowEnhancedClassRedefinition',
+        '-javaagent:' + groovyReset.absolutePath
+    ]
 }
 
 bootRun {
-    systemProperties = System.properties
-    jvmArgs = ["-Xmx1G"]
-    addResources = true
+    ignoreExitValue true
+    systemProperties System.properties
+    jvmArgs(allJvmArgs)
+    sourceResources sourceSets.main
+    systemProperties hoistMetaData
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = allJvmArgs
+    }
+}
+
+// Ask IntelliJ to download sources and javadocs for Gradle-managed dependencies.
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
 
 
 //--------------------------------------------------
 // Extensions to build.info (Hoist-Core requirement)
 //--------------------------------------------------
-buildProperties.doLast {
-    File grailsBuildInfoFile = it.outputs.files.files.find { it.name == 'grails.build.info' }
-    if(!grailsBuildInfoFile) return
-
+tasks.war.doFirst {
+    File infoFile = layout.buildDirectory.file('resources/main/META-INF/grails.build.info').get().asFile
     Properties properties = new Properties()
-    grailsBuildInfoFile.withInputStream {properties.load(it)}
-    properties.setProperty('info.xh.appCode', appCode)
-    properties.setProperty('info.xh.appName', appName)
-    properties.setProperty('info.xh.appBuild', appBuild)
-    grailsBuildInfoFile.withOutputStream {properties.store(it, null)}
+    infoFile.withInputStream {properties.load(it)}
+    properties.putAll(hoistMetaData)
+    infoFile.withOutputStream {properties.store(it, null)}
 }
